// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TeamWork > matches snapshot with extreme data 1`] = `
<div>
  <div
    class="team-work"
  >
    <div
      class="card-header"
    >
      <h2
        class="card-title"
      >
        团队成员工作状态
      </h2>
      <div
        class="card-subtitle"
      >
        个人任务、PR及质量指标
      </div>
    </div>
    <div
      class="team-work-content"
    >
      <div
        class="team-stats"
      >
        <div
          class="team-stat"
        >
          <div
            class="team-stat-label"
          >
            团队平均质量分
          </div>
          <div
            class="team-stat-value"
          >
            <span
              class="stat-number"
            >
              65
            </span>
            <div
              class="stat-badge"
              style="background-color: #ff9800;"
            >
              中等
            </div>
          </div>
        </div>
        <div
          class="team-stat"
        >
          <div
            class="team-stat-label"
          >
            团队平均饱和度
          </div>
          <div
            class="team-stat-value"
          >
            <span
              class="stat-number"
            >
              80
            </span>
            <div
              class="stat-badge"
              style="background-color: #4caf50;"
            >
              良好
            </div>
          </div>
        </div>
        <div
          class="team-stat"
        >
          <div
            class="team-stat-label"
          >
            成员状态分布
          </div>
          <div
            class="team-stat-value"
          >
            <div
              style="display: flex; flex-direction: column; gap: 8px;"
            >
              <div
                style="display: flex; justify-content: space-between; font-size: 14px;"
              >
                <span
                  style="color: #ff9800;"
                >
                  空闲: 
                  1
                </span>
                <span
                  style="color: #f44336;"
                >
                  过载: 
                  1
                </span>
              </div>
              <div
                style="display: flex; justify-content: space-between; font-size: 14px;"
              >
                <span
                  style="color: #2196f3;"
                >
                  需指导: 
                  0
                </span>
                <span
                  style="color: #4caf50;"
                >
                  正常: 
                  0
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="team-members"
      >
        <h3
          class="section-title"
        >
          成员详细指标
        </h3>
        <div
          class="members-list"
        >
          <div
            class="member-item"
          >
            <div
              class="member-info"
            >
              <div
                class="member-name"
              >
                Overworked
              </div>
              <div
                class="member-status-badge"
                style="background-color: #f44336; color: white; font-size: 12px; padding: 2px 8px; border-radius: 10px; font-weight: 600; margin-left: 8px;"
              >
                过载
              </div>
              <div
                class="member-stats"
              >
                <span
                  class="member-stat"
                >
                  <span
                    class="stat-label"
                  >
                    任务:
                  </span>
                  <span
                    class="stat-value"
                  >
                    30
                    /
                    40
                  </span>
                </span>
                <span
                  class="member-stat"
                >
                  <span
                    class="stat-label"
                  >
                    PR:
                  </span>
                  <span
                    class="stat-value"
                  >
                    15
                    /
                    20
                  </span>
                </span>
                <span
                  class="member-stat"
                >
                  <span
                    class="stat-label"
                  >
                    延迟:
                  </span>
                  <span
                    class="stat-value"
                  >
                    5
                  </span>
                </span>
              </div>
            </div>
            <div
              class="member-bars"
            >
              <div
                class="pr-bar-container"
              >
                <div
                  class="bar-label"
                >
                  任务完成率
                </div>
                <div
                  class="pr-bar"
                >
                  <div
                    class="pr-bar-fill"
                    style="width: 75%; background-color: #ff9800;"
                  />
                </div>
                <div
                  style="min-width: 60px; text-align: right; font-size: 14px;"
                >
                  75.0
                  %
                </div>
              </div>
              <div
                class="pr-bar-container"
              >
                <div
                  class="bar-label"
                >
                  PR合并率
                </div>
                <div
                  class="pr-bar"
                >
                  <div
                    class="pr-bar-fill"
                    style="width: 75%; background-color: #ff9800;"
                  />
                </div>
                <div
                  style="min-width: 60px; text-align: right; font-size: 14px;"
                >
                  75.0
                  %
                </div>
              </div>
              <div
                class="delay-container"
              >
                <div
                  class="delay-rate"
                >
                  <span
                    class="delay-label"
                  >
                    指摘频率:
                  </span>
                  <span
                    class="delay-value"
                    style="color: #f44336;"
                  >
                    15.0
                     (
                    高
                    )
                  </span>
                </div>
                <div
                  class="delay-rate"
                >
                  <span
                    class="delay-label"
                  >
                    质量分:
                  </span>
                  <span
                    class="delay-value"
                    style="color: #f44336;"
                  >
                    45
                  </span>
                </div>
              </div>
              <div
                class="saturation-analysis"
              >
                <div
                  style="font-size: 12px; color: #666; margin-bottom: 4px;"
                >
                  工作饱和度分析:
                </div>
                <div
                  style="display: flex; justify-content: space-between; font-size: 12px;"
                >
                  <span>
                    工作量: 
                    60
                  </span>
                  <span
                    style="color: #f44336;"
                  >
                    饱和度: 
                    95
                  </span>
                  <span>
                    工作负荷过高
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="member-item"
          >
            <div
              class="member-info"
            >
              <div
                class="member-name"
              >
                Underworked
              </div>
              <div
                class="member-status-badge"
                style="background-color: #ff9800; color: white; font-size: 12px; padding: 2px 8px; border-radius: 10px; font-weight: 600; margin-left: 8px;"
              >
                空闲
              </div>
              <div
                class="member-stats"
              >
                <span
                  class="member-stat"
                >
                  <span
                    class="stat-label"
                  >
                    任务:
                  </span>
                  <span
                    class="stat-value"
                  >
                    5
                    /
                    5
                  </span>
                </span>
                <span
                  class="member-stat"
                >
                  <span
                    class="stat-label"
                  >
                    PR:
                  </span>
                  <span
                    class="stat-value"
                  >
                    2
                    /
                    2
                  </span>
                </span>
                <span
                  class="member-stat"
                >
                  <span
                    class="stat-label"
                  >
                    延迟:
                  </span>
                  <span
                    class="stat-value"
                  >
                    0
                  </span>
                </span>
              </div>
            </div>
            <div
              class="member-bars"
            >
              <div
                class="pr-bar-container"
              >
                <div
                  class="bar-label"
                >
                  任务完成率
                </div>
                <div
                  class="pr-bar"
                >
                  <div
                    class="pr-bar-fill"
                    style="width: 100%; background-color: #4caf50;"
                  />
                </div>
                <div
                  style="min-width: 60px; text-align: right; font-size: 14px;"
                >
                  100.0
                  %
                </div>
              </div>
              <div
                class="pr-bar-container"
              >
                <div
                  class="bar-label"
                >
                  PR合并率
                </div>
                <div
                  class="pr-bar"
                >
                  <div
                    class="pr-bar-fill"
                    style="width: 100%; background-color: #4caf50;"
                  />
                </div>
                <div
                  style="min-width: 60px; text-align: right; font-size: 14px;"
                >
                  100.0
                  %
                </div>
              </div>
              <div
                class="delay-container"
              >
                <div
                  class="delay-rate"
                >
                  <span
                    class="delay-label"
                  >
                    指摘频率:
                  </span>
                  <span
                    class="delay-value"
                    style="color: #4caf50;"
                  >
                    2.0
                     (
                    低
                    )
                  </span>
                </div>
                <div
                  class="delay-rate"
                >
                  <span
                    class="delay-label"
                  >
                    质量分:
                  </span>
                  <span
                    class="delay-value"
                    style="color: #4caf50;"
                  >
                    90
                  </span>
                </div>
              </div>
              <div
                class="saturation-analysis"
              >
                <div
                  style="font-size: 12px; color: #666; margin-bottom: 4px;"
                >
                  工作饱和度分析:
                </div>
                <div
                  style="display: flex; justify-content: space-between; font-size: 12px;"
                >
                  <span>
                    工作量: 
                    7
                  </span>
                  <span
                    style="color: #4caf50;"
                  >
                    饱和度: 
                    40
                  </span>
                  <span>
                    工作量较少
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TeamWork > matches snapshot with typical data 1`] = `
<div>
  <div
    class="team-work"
  >
    <div
      class="card-header"
    >
      <h2
        class="card-title"
      >
        团队成员工作状态
      </h2>
      <div
        class="card-subtitle"
      >
        个人任务、PR及质量指标
      </div>
    </div>
    <div
      class="team-work-content"
    >
      <div
        class="team-stats"
      >
        <div
          class="team-stat"
        >
          <div
            class="team-stat-label"
          >
            团队平均质量分
          </div>
          <div
            class="team-stat-value"
          >
            <span
              class="stat-number"
            >
              75
            </span>
            <div
              class="stat-badge"
              style="background-color: #ff9800;"
            >
              中等
            </div>
          </div>
        </div>
        <div
          class="team-stat"
        >
          <div
            class="team-stat-label"
          >
            团队平均饱和度
          </div>
          <div
            class="team-stat-value"
          >
            <span
              class="stat-number"
            >
              80
            </span>
            <div
              class="stat-badge"
              style="background-color: #4caf50;"
            >
              良好
            </div>
          </div>
        </div>
        <div
          class="team-stat"
        >
          <div
            class="team-stat-label"
          >
            成员状态分布
          </div>
          <div
            class="team-stat-value"
          >
            <div
              style="display: flex; flex-direction: column; gap: 8px;"
            >
              <div
                style="display: flex; justify-content: space-between; font-size: 14px;"
              >
                <span
                  style="color: #ff9800;"
                >
                  空闲: 
                  0
                </span>
                <span
                  style="color: #f44336;"
                >
                  过载: 
                  1
                </span>
              </div>
              <div
                style="display: flex; justify-content: space-between; font-size: 14px;"
              >
                <span
                  style="color: #2196f3;"
                >
                  需指导: 
                  0
                </span>
                <span
                  style="color: #4caf50;"
                >
                  正常: 
                  2
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="team-members"
      >
        <h3
          class="section-title"
        >
          成员详细指标
        </h3>
        <div
          class="members-list"
        >
          <div
            class="member-item"
          >
            <div
              class="member-info"
            >
              <div
                class="member-name"
              >
                Alice
              </div>
              <div
                class="member-status-badge"
                style="background-color: #4caf50; color: white; font-size: 12px; padding: 2px 8px; border-radius: 10px; font-weight: 600; margin-left: 8px;"
              >
                正常
              </div>
              <div
                class="member-stats"
              >
                <span
                  class="member-stat"
                >
                  <span
                    class="stat-label"
                  >
                    任务:
                  </span>
                  <span
                    class="stat-value"
                  >
                    15
                    /
                    20
                  </span>
                </span>
                <span
                  class="member-stat"
                >
                  <span
                    class="stat-label"
                  >
                    PR:
                  </span>
                  <span
                    class="stat-value"
                  >
                    8
                    /
                    10
                  </span>
                </span>
                <span
                  class="member-stat"
                >
                  <span
                    class="stat-label"
                  >
                    延迟:
                  </span>
                  <span
                    class="stat-value"
                  >
                    2
                  </span>
                </span>
              </div>
            </div>
            <div
              class="member-bars"
            >
              <div
                class="pr-bar-container"
              >
                <div
                  class="bar-label"
                >
                  任务完成率
                </div>
                <div
                  class="pr-bar"
                >
                  <div
                    class="pr-bar-fill"
                    style="width: 75%; background-color: #ff9800;"
                  />
                </div>
                <div
                  style="min-width: 60px; text-align: right; font-size: 14px;"
                >
                  75.0
                  %
                </div>
              </div>
              <div
                class="pr-bar-container"
              >
                <div
                  class="bar-label"
                >
                  PR合并率
                </div>
                <div
                  class="pr-bar"
                >
                  <div
                    class="pr-bar-fill"
                    style="width: 80%; background-color: #4caf50;"
                  />
                </div>
                <div
                  style="min-width: 60px; text-align: right; font-size: 14px;"
                >
                  80.0
                  %
                </div>
              </div>
              <div
                class="delay-container"
              >
                <div
                  class="delay-rate"
                >
                  <span
                    class="delay-label"
                  >
                    指摘频率:
                  </span>
                  <span
                    class="delay-value"
                    style="color: #4caf50;"
                  >
                    4.0
                     (
                    低
                    )
                  </span>
                </div>
                <div
                  class="delay-rate"
                >
                  <span
                    class="delay-label"
                  >
                    质量分:
                  </span>
                  <span
                    class="delay-value"
                    style="color: #4caf50;"
                  >
                    85
                  </span>
                </div>
              </div>
              <div
                class="saturation-analysis"
              >
                <div
                  style="font-size: 12px; color: #666; margin-bottom: 4px;"
                >
                  工作饱和度分析:
                </div>
                <div
                  style="display: flex; justify-content: space-between; font-size: 12px;"
                >
                  <span>
                    工作量: 
                    30
                  </span>
                  <span
                    style="color: #4caf50;"
                  >
                    饱和度: 
                    70
                  </span>
                  <span>
                    工作状态良好
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="member-item"
          >
            <div
              class="member-info"
            >
              <div
                class="member-name"
              >
                Bob
              </div>
              <div
                class="member-status-badge"
                style="background-color: #4caf50; color: white; font-size: 12px; padding: 2px 8px; border-radius: 10px; font-weight: 600; margin-left: 8px;"
              >
                正常
              </div>
              <div
                class="member-stats"
              >
                <span
                  class="member-stat"
                >
                  <span
                    class="stat-label"
                  >
                    任务:
                  </span>
                  <span
                    class="stat-value"
                  >
                    12
                    /
                    18
                  </span>
                </span>
                <span
                  class="member-stat"
                >
                  <span
                    class="stat-label"
                  >
                    PR:
                  </span>
                  <span
                    class="stat-value"
                  >
                    9
                    /
                    12
                  </span>
                </span>
                <span
                  class="member-stat"
                >
                  <span
                    class="stat-label"
                  >
                    延迟:
                  </span>
                  <span
                    class="stat-value"
                  >
                    2
                  </span>
                </span>
              </div>
            </div>
            <div
              class="member-bars"
            >
              <div
                class="pr-bar-container"
              >
                <div
                  class="bar-label"
                >
                  任务完成率
                </div>
                <div
                  class="pr-bar"
                >
                  <div
                    class="pr-bar-fill"
                    style="width: 66.66666666666666%; background-color: #ff9800;"
                  />
                </div>
                <div
                  style="min-width: 60px; text-align: right; font-size: 14px;"
                >
                  66.7
                  %
                </div>
              </div>
              <div
                class="pr-bar-container"
              >
                <div
                  class="bar-label"
                >
                  PR合并率
                </div>
                <div
                  class="pr-bar"
                >
                  <div
                    class="pr-bar-fill"
                    style="width: 75%; background-color: #ff9800;"
                  />
                </div>
                <div
                  style="min-width: 60px; text-align: right; font-size: 14px;"
                >
                  75.0
                  %
                </div>
              </div>
              <div
                class="delay-container"
              >
                <div
                  class="delay-rate"
                >
                  <span
                    class="delay-label"
                  >
                    指摘频率:
                  </span>
                  <span
                    class="delay-value"
                    style="color: #ff9800;"
                  >
                    8.0
                     (
                    中
                    )
                  </span>
                </div>
                <div
                  class="delay-rate"
                >
                  <span
                    class="delay-label"
                  >
                    质量分:
                  </span>
                  <span
                    class="delay-value"
                    style="color: #ff9800;"
                  >
                    68
                  </span>
                </div>
              </div>
              <div
                class="saturation-analysis"
              >
                <div
                  style="font-size: 12px; color: #666; margin-bottom: 4px;"
                >
                  工作饱和度分析:
                </div>
                <div
                  style="display: flex; justify-content: space-between; font-size: 12px;"
                >
                  <span>
                    工作量: 
                    30
                  </span>
                  <span
                    style="color: #ff9800;"
                  >
                    饱和度: 
                    80
                  </span>
                  <span>
                    工作状态良好
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="member-item"
          >
            <div
              class="member-info"
            >
              <div
                class="member-name"
              >
                Charlie
              </div>
              <div
                class="member-status-badge"
                style="background-color: #f44336; color: white; font-size: 12px; padding: 2px 8px; border-radius: 10px; font-weight: 600; margin-left: 8px;"
              >
                过载
              </div>
              <div
                class="member-stats"
              >
                <span
                  class="member-stat"
                >
                  <span
                    class="stat-label"
                  >
                    任务:
                  </span>
                  <span
                    class="stat-value"
                  >
                    16
                    /
                    16
                  </span>
                </span>
                <span
                  class="member-stat"
                >
                  <span
                    class="stat-label"
                  >
                    PR:
                  </span>
                  <span
                    class="stat-value"
                  >
                    7
                    /
                    8
                  </span>
                </span>
                <span
                  class="member-stat"
                >
                  <span
                    class="stat-label"
                  >
                    延迟:
                  </span>
                  <span
                    class="stat-value"
                  >
                    0
                  </span>
                </span>
              </div>
            </div>
            <div
              class="member-bars"
            >
              <div
                class="pr-bar-container"
              >
                <div
                  class="bar-label"
                >
                  任务完成率
                </div>
                <div
                  class="pr-bar"
                >
                  <div
                    class="pr-bar-fill"
                    style="width: 100%; background-color: #4caf50;"
                  />
                </div>
                <div
                  style="min-width: 60px; text-align: right; font-size: 14px;"
                >
                  100.0
                  %
                </div>
              </div>
              <div
                class="pr-bar-container"
              >
                <div
                  class="bar-label"
                >
                  PR合并率
                </div>
                <div
                  class="pr-bar"
                >
                  <div
                    class="pr-bar-fill"
                    style="width: 87.5%; background-color: #4caf50;"
                  />
                </div>
                <div
                  style="min-width: 60px; text-align: right; font-size: 14px;"
                >
                  87.5
                  %
                </div>
              </div>
              <div
                class="delay-container"
              >
                <div
                  class="delay-rate"
                >
                  <span
                    class="delay-label"
                  >
                    指摘频率:
                  </span>
                  <span
                    class="delay-value"
                    style="color: #f44336;"
                  >
                    12.0
                     (
                    高
                    )
                  </span>
                </div>
                <div
                  class="delay-rate"
                >
                  <span
                    class="delay-label"
                  >
                    质量分:
                  </span>
                  <span
                    class="delay-value"
                    style="color: #f44336;"
                  >
                    55
                  </span>
                </div>
              </div>
              <div
                class="saturation-analysis"
              >
                <div
                  style="font-size: 12px; color: #666; margin-bottom: 4px;"
                >
                  工作饱和度分析:
                </div>
                <div
                  style="display: flex; justify-content: space-between; font-size: 12px;"
                >
                  <span>
                    工作量: 
                    24
                  </span>
                  <span
                    style="color: #f44336;"
                  >
                    饱和度: 
                    95
                  </span>
                  <span>
                    工作负荷过高
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
